--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 8000",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
+    "antd": "^4.6.4",
     "next": "9.5.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
